--- a/src/Topxia/WebBundle/Resources/views/Login/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Login/index.html.twig
@@ -36,9 +36,9 @@ style=" background-image:url(/ff.jpg);
       {% endif %}
       {{ web_macro.flash_messages() }}
       <div class="form-group mbl">
-        <label class="control-label" for="login_username">{{'帐号'|trans}}</label>
+        <label class="control-label" for="login_username">{{'工号'|trans}}</label>
         <div class="controls">
-          <input class="form-control input-lg" id="login_username" type="text" name="_username" value="{{ last_username }}" required placeholder='{{'用户名/邮箱'|trans}}' />
+          <input class="form-control input-lg" id="login_username" type="text" name="_username" value="{{ last_username }}" required placeholder='{{'工号'|trans}}' />
           <div class="help-block"></div>
         </div>
       </div>
