--- a/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
@@ -64,7 +64,9 @@
   #}
   <div class="form-group">
     <select id="keywordType" name="keywordType" class="form-control">
-      {{ select_options(dict('userKeyWordType'), app.request.query.get('keywordType') ? app.request.query.get('keywordType') : 'nickname') }}
+     {# {{ select_options(dict('userKeyWordType'), app.request.query.get('keywordType') ? app.request.query.get('keywordType') : 'nickname') }}
+     #}
+      <option value="nickname">工号</option>
     </select>
   </div>
 
@@ -85,12 +87,12 @@
 <table id="user-table" class="table table-striped table-hover" data-search-form="#user-search-form">
   <thead>
     <tr>
-      <th>用户名</th>
-      <th>手机号</th>
       <th>工号</th>
-      <th>科室</th>
-      <th>学位</th>
+      <th>姓名</th>
       <th>职称</th>
+      <th>科室分类</th>
+      <th>所属科室</th>
+      <th>最高学位</th>
       <th>操作</th>
     </tr>
   </thead>
