--- a/src/Topxia/AdminBundle/Resources/views/sorce/score.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/sorce/score.html.twig
@@ -9,6 +9,39 @@
             var department = $("#department").val();
             myajax('/functionDir/createExcel/make_xueshengtongji.php?year='+year+'&department='+department);
         }
+        function fun(e){
+            $num = $(e).attr('data_id');
+            $.ajax({
+                type: "GET",
+                url: "/sorce/member?memberNum="+$num, //用于文件上传的服务器端请求地址
+                dataType: 'json', //返回值类型 一般设置为json
+                success: function (data, status)  //服务器成功响应处理函数
+                {
+                    var html = "";
+                    for(var i = 0;i<data.length;i++){
+                        html = html + "<tr>"
+                            +"<td>"+data[i].memberNum+"</td>"
+                            +"<td>"+data[i].turename+"</td>"
+                            +"<td>"+data[i].score+"</td>";
+                            if(data[i].title != null){
+                                html = html +  "<td>"+data[i].title+"</td>";
+                            }else{
+                                html = html +  "<td>"+data[i].courseName+"</td>";
+                            }
+                        html = html +"<td>"+data[i].year+"</td>"
+                            + "</tr>";
+
+                    }
+                    $('#p_body').html(html);
+                },
+                error : function (data, status, e)//服务器响应失败处理函数
+                {
+                    $("#copyFile").val("");
+                    $("#file").val("");
+                    $("#depositReceipt").val("");
+                }
+            });
+        }
     </script>
     <div style="height: 40px">
         <form action="{{ path('admin_sorce_statistical') }}" method="get">
@@ -22,6 +55,9 @@
             </select>
             <input type="submit" value="查询" >
             <button onclick="getExcel()" style="float: right">Excel下载</button>
+            <button type="button" class="btn btn-info btn-sm button1" style="float: right" onclick="myajaxFileUpload('/functionDir/upload_member_score.php',null)" class="btn"><span class="glyphicon glyphicon-plus"></span>批量创建用户</button>
+            <input type="text" id="copyFile" name="copyFile"  style=" width:66%;margin-right:10px;display: none" />
+            <input type="file" class="input"id="file"  style="float: right"  name="file" onchange="getFile(this,'copyFile')"  />
         </form>
 
     </div>
@@ -30,7 +66,7 @@
         <thead>
         <tr>
             <th>科室名称</th>
-            <th>用户名</th>
+            <th>工号</th>
             <th>职称</th>
             <th>年龄</th>
             <th>是否合格</th>
@@ -41,7 +77,7 @@
                 {% for ar in arry %}
                     <tr>
                         <td>{{ ar[0] }}</td>
-                        <td>{{ ar[1] }}</td>
+                        <td><a onclick="fun(this)" data-toggle="modal" data-target="#myModal"  data_id="{{ ar[1] }}" >{{ ar[1] }}</a>
                         <td>{{ ar[2] }}</td>
                         <td>{{ ar[3] }}</td>
                         <td>{{ ar[4] }}</td>
@@ -59,4 +95,40 @@
         {% endfor %}
         <li {% if paginator.currentPage == paginator.lastPage %}class="disabled"{% endif %}><a  href="{{ paginator.getPageUrl(paginator.nextPage) }}">下一页</a></li>
     </ul>
+
+
+    <!-- 模态框（Modal） -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        &times;
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">
+                        成绩
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <table class="table table-striped table-hover" data-search-form="#user-search-form">
+                        <thead>
+                          <tr>
+                              <td>工号</td>
+                              <td>姓名</td>
+                              <td>分数</td>
+                              <td>课程</td>
+                              <td>学分年度</td>
+                          </tr>
+                        </thead>
+                        <tbody id="p_body">
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                    </button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal -->
 {% endblock %}
