--- a/src/Topxia/WebBundle/Resources/views/MyCourse/score.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyCourse/score.html.twig
@@ -10,7 +10,13 @@
         <div class="panel-body">
              <table class="table table-striped table-hover">
                  <tr><th>课程名</th><th>完成时间</th><th>学分</th></tr>
-                 <tr><td>{{ sorce.title }}</td><td>{{ sorce.createTime }}</td><td>{{ sorce.xuefen }}</td></tr>
+                 {% for( s in sorce) %}
+                      {% if(s.title != null) %}
+                          <tr><td>{{ s.title }}</td><td>{{ s.createTime }}</td><td>{{ s.xuefen }}</td></tr>
+                      {% else %}
+                          <tr><td>{{ s.courseName }}</td><td>{{ s.createTime }}</td><td>{{ s.xuefen }}</td></tr>
+                      {% endif %}
+                 {% endfor %}
              </table>
         </div>
     </div>
