--- a/src/Topxia/AdminBundle/Resources/views/sorce/score.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/sorce/score.html.twig
@@ -21,7 +21,7 @@
                     for(var i = 0;i<data.length;i++){
                         html = html + "<tr>"
                             +"<td>"+data[i].memberNum+"</td>"
-                            +"<td>"+data[i].turename+"</td>"
+                            +"<td>"+data[i].truename+"</td>"
                             +"<td>"+data[i].score+"</td>";
                             if(data[i].title != null){
                                 html = html +  "<td>"+data[i].title+"</td>";
@@ -55,7 +55,7 @@
             </select>
             <input type="submit" value="查询" >
             <button onclick="getExcel()" style="float: right">Excel下载</button>
-            <button type="button" class="btn btn-info btn-sm button1" style="float: right" onclick="myajaxFileUpload('/functionDir/upload_member_score.php',null)" class="btn"><span class="glyphicon glyphicon-plus"></span>批量创建用户</button>
+            <button type="button" class="btn btn-info btn-sm button1" style="float: right" onclick="myajaxFileUpload('/functionDir/upload_member_score.php',null)" class="btn"><span class="glyphicon glyphicon-plus"></span>批量上传成绩</button>
             <input type="text" id="copyFile" name="copyFile"  style=" width:66%;margin-right:10px;display: none" />
             <input type="file" class="input"id="file"  style="float: right"  name="file" onchange="getFile(this,'copyFile')"  />
         </form>
