科室统计成绩

--- a/src/Topxia/AdminBundle/Resources/views/User/edit-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/edit-modal.html.twig
@@ -157,7 +157,7 @@
 
             <div class="row form-group">
                 <div class="col-md-2 control-label">
-                  <label for="company">科室分类</label>
+                  <label for="company">所属科室</label>
                 </div>
                 <div class="col-md-7 controls">
 
@@ -171,7 +171,7 @@
 
           <div class="row form-group">
             <div class="col-md-2 control-label">
-              <label for="job">所属科室</label>
+              <label for="job">科室分类</label>
             </div>
             <div class="col-md-7 controls">
               <input type="text" id="varcharField4" name="varcharField4" class="form-control" value="{{profile.varcharField4}}">
