--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/students.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/students.html.twig
@@ -16,7 +16,7 @@
 
     <div class="panel-bar">
       <button class="btn btn-info btn-sm mhs" id="student-add-btn" data-toggle="modal" data-target="#modal" data-url="{{ path('classroom_manage_student_create', {id:classroom.id}) }}"><i class="glyphicon glyphicon-plus"></i> 添加学员</button>
-      <a class="btn btn-info btn-sm mhs" data-toggle="modal" data-target="#modal" data-url="{{ path('importer_index', {type: 'classroom-member',classroomId:classroom.id}) }}"><i class="glyphicon glyphicon-import"></i> 批量导入</a>
+      <a class="btn btn-info btn-sm mhs" data-toggle="modal" data-target="#modal" data-url="{{ path('importer_index', {type: 'classroom-member',classroomId:classroom.id}) }}"><i class="glyphicon glyphicon-import"></i> 批量添加学员</a>
 
         {#
       {% if classroom.status == 'published' %}
