--- a/src/Topxia/WebBundle/Resources/views/MyCourse/batstudentcourse.htm.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyCourse/batstudentcourse.htm.twig
@@ -15,16 +15,17 @@
            <div class="form-group">
                 科&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;室
                <select id="keshi" name="keshi" style="width: 30%;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 6px 12px;">
+                   <option value=""> 全选 </option>
                    {% for k in classr %}
                        <option {% if keshi == k.id %} selected {% endif %} value="{{ k.id }}"> {{ k.title }} </option>
                    {% endfor %}
                </select>
-               所属科室
+               科室分类
                <select id="sskeshi" name="sskeshi" style="width: 30%;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 6px 12px;">
                    <option value=""> 全选 </option>
-                   <option value="护士"> 管理及其他部门 </option>
-                   <option value="技师"> 临床部门 </option>
-                   <option value="医生"> 医技部门 </option>
+                   <option value="管理及其他部门"> 管理及其他部门 </option>
+                   <option value="临床部门"> 临床部门 </option>
+                   <option value="医技部门"> 医技部门 </option>
                </select>
            </div>
            <div class="form-group">
@@ -50,6 +51,11 @@
            <div class="form-group">
                出生日期
                <input type="text" name="birthday" style="width: 30%;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 6px 12px;"/>
+               到
+               <input type="text" name="birthday_end" style="width: 30%;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 6px 12px;"/>
+           </div>
+           <div class="form-group">
+
                最高学位
                <select id="degree" name="degree" style="width: 30%;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 6px 12px;">
                    <option value=""> 全选 </option>
