--- a/src/Topxia/AdminBundle/Resources/views/sorce/score.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/sorce/score.html.twig
@@ -29,7 +29,8 @@
                             }else{
                                 html = html +  "<td>"+data[i].courseName+"</td>";
                             }
-                        html = html +"<td>"+data[i].year+"</td>"
+                            html = html +"<td>"+data[i].year+"</td>";
+                            html = html +"<td>"+data[i].remark+"</td>"
                             + "</tr>";
 
                     }
@@ -126,6 +127,7 @@
                               <td>分数</td>
                               <td>课程</td>
                               <td>学分年度</td>
+                              <td>备注</td>
                           </tr>
                         </thead>
                         <tbody id="p_body">
