--- a/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
@@ -69,10 +69,28 @@
       <option value="nickname">工号</option>
     </select>
   </div>
-
   <div class="form-group">
     <input type="text" id="keyword" name="keyword" class="form-control" value="{{ app.request.query.get('keyword') }}" placeholder="关键词">
   </div>
+
+
+    <div class="form-group">
+       <p>姓名</p>
+    </div>
+    <div class="form-group">
+      <input type="text" id="truename" name="truename" class="form-control" value="{{ truename }}" placeholder="关键词">
+    </div>
+
+    <div class="form-group">
+      <p>所属科室</p>
+    </div>
+    <div class="form-group">
+      <select id="company" name="company" class="form-control">
+          {% for k in classr1 %}
+            <option {% if department == k.id %} selected {% endif %} value="{{ k.id }}">{{ k.title }}</option>
+          {% endfor %}
+      </select>
+    </div>
 
 
   <button class="btn btn-primary">搜索</button>
