--- a/src/Topxia/WebBundle/Resources/views/MyCourse/batstudentcourse.htm.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyCourse/batstudentcourse.htm.twig
@@ -42,10 +42,10 @@
                职称分类
                <select id="jobType" name="jobType" style="width: 30%;border: 1px solid #ccc;border-radius: 4px;height: 34px;padding: 6px 12px;">
                    <option value=""> 全选 </option>
-                   <option value="护士"> 正高 </option>
-                   <option value="技师"> 副高 </option>
-                   <option value="医生"> 中级 </option>
-                   <option value="药师"> 初级 </option>
+                   <option value="正高"> 正高 </option>
+                   <option value="副高"> 副高 </option>
+                   <option value="中级"> 中级 </option>
+                   <option value="初级"> 初级 </option>
                </select>
            </div>
            <div class="form-group">
