--- a/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
@@ -70,9 +70,8 @@
     </select>
   </div>
   <div class="form-group">
-    <input type="text" id="keyword" name="keyword" class="form-control" value="{{ app.request.query.get('keyword') }}" placeholder="关键词">
+    <input type="text" id="keyword" name="keyword" class="form-control" value="{{ memberNum }}" placeholder="关键词">
   </div>
-
 
     <div class="form-group">
        <p>姓名</p>
@@ -86,8 +85,9 @@
     </div>
     <div class="form-group">
       <select id="company" name="company" class="form-control">
+          <option value="">全选</option>
           {% for k in classr1 %}
-            <option {% if department == k.id %} selected {% endif %} value="{{ k.id }}">{{ k.title }}</option>
+            <option {% if company == k.id %} selected {% endif %} value="{{ k.id }}">{{ k.title }}</option>
           {% endfor %}
       </select>
     </div>
