--- a/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
@@ -33,73 +33,26 @@
 </div>
     <div>
 <form id="user-search-form" class="form-inline well well-sm" action="" method="get" novalidate>
-  <div class="mbm">
-    {% include 'OrgBundle:Org:org-tree-select.html.twig' with {orgCode: app.request.get('orgCode'), modal: 'list'} %}
-   <!--
-    <select class="form-control" name="datePicker" id="datePicker">
-      {{ select_options({longinDate:'登录时间', registerDate: '注册时间'}, app.request.get('datePicker') ,'--时间类型--') }}
-    </select>
-
-    <div class="form-group ">
-      <input class="form-control" type="text" id="startDate" name="startDate" value="{{app.request.query.get('startDate')}}" placeholder="起始时间">
-      -
-      <input class="form-control" type="text" id="endDate" name="endDate" value="{{app.request.query.get('endDate')}}" placeholder="结束时间">
-    </div>
-  </div>
-  -->
-    {#
-  <div class="form-group">
-    <select class="form-control" name="roles">
-      {{ select_options(dict('userRole'), app.request.query.get('roles'), '--所有角色--') }}
-    </select>
-  </div>
-#}
-  <span class="divider"></span>
-  {#
-  <div class="form-group">
-    <select id="keywordUserType" name="keywordUserType" class="form-control">
-      {{ select_options(dict('userType'), app.request.query.get('keywordUserType'), '--注册来源--') }}
-    </select>
-  </div>
-  #}
-  <div class="form-group">
-    <select id="keywordType" name="keywordType" class="form-control">
-     {# {{ select_options(dict('userKeyWordType'), app.request.query.get('keywordType') ? app.request.query.get('keywordType') : 'nickname') }}
-     #}
-      <option value="nickname">工号</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <input type="text" id="keyword" name="keyword" class="form-control" value="{{ memberNum }}" placeholder="关键词">
-  </div>
-
-    <div class="form-group">
-       <p>姓名</p>
-    </div>
-    <div class="form-group">
-      <input type="text" id="truename" name="truename" class="form-control" value="{{ truename }}" placeholder="关键词">
-    </div>
-
-    <div class="form-group">
-      <p>所属科室</p>
-    </div>
-    <div class="form-group">
-      <select id="company" name="company" class="form-control">
-          <option value="">全选</option>
-          {% for k in classr1 %}
-            <option {% if company == k.id %} selected {% endif %} value="{{ k.id }}">{{ k.title }}</option>
-          {% endfor %}
-      </select>
-    </div>
-
-
-  <button class="btn btn-primary">搜索</button>
-
-  {% if is_granted('ROLE_SUPER_ADMIN') %}
-    {% if showUserExport %}
-      <a class="btn btn-primary mhs" id="user-export" data-toggle="modal" data-target="#modal" data-url="{{path('admin_user_export')}}">导出搜索结果</a>
-    {% endif %}
-  {% endif %}
+   <div class="mbm">
+     {% include 'OrgBundle:Org:org-tree-select.html.twig' with {orgCode: app.request.get('orgCode'), modal: 'list'} %}
+            <span class="divider"></span>
+            <div class="form-group">
+                 <select id="keywordType" name="keywordType" class="form-control">
+                   <option value="nickname">工号</option>
+                 </select>
+                 <input type="text" id="keyword" name="keyword" class="form-control" value="{{ memberNum }}" placeholder="关键词">
+                    姓名
+                   <input type="text" id="truename" name="truename" class="form-control" value="{{ truename }}" placeholder="关键词">
+                  所属科室
+                  <select id="company" name="company" class="form-control">
+                      <option value="">全选</option>
+                      {% for k in classr1 %}
+                        <option {% if company == k.id %} selected {% endif %} value="{{ k.id }}">{{ k.title }}</option>
+                      {% endfor %}
+                  </select>
+                  <button class="btn btn-primary" style="float: right">搜索</button>
+            </div>
+   </div>
 </form>
 
 <table id="user-table" class="table table-striped table-hover" data-search-form="#user-search-form">
