--- a/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <div class="form-group">
+      <div class="form-group" style="display: none">
         <label class="col-md-2 control-label">{{'学科类型'|trans}}</label>
         <div class="col-md-8 controls">
           <select id="" name="" required="required" >
