--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/class-grid.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/class-grid.html.twig
@@ -7,7 +7,7 @@
       {% set classroomMember = data('ClassroomMember', {classroomId:classroom.id, userId: app.user.id|default(0)}) %}
 
       {% if classroomMember|default(false) %}
-        <a href="{{ path('classroom_show', {id:classroom.id}) }}" class="btn btn-warning">继续学习</a>
+        <a href="{{ path('classroom_show', {id:classroom.id}) }}" class="btn btn-warning">开始学习</a>
       {% else %}
         <a href="{{ path('classroom_show', {id:classroom.id}) }}" class="btn btn-warning">立即加入</a>
       {% endif %}
