--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header-for-member.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header-for-member.html.twig
@@ -38,7 +38,7 @@
   <div class="course-header-bottom clearfix">
     <span class="pull-left">{{'完成课时：'|trans}} {{ learnProgress.number }}/{{ learnProgress.total }}</span>
     {% if nextLearnLesson %}
-      <a class="btn btn-lg btn-primary" href="{{ path('course_learn', {id:course.id,lessonId:nextLearnLesson.id}) }}#lesson/{{ nextLearnLesson.id }}">{{'继续学习'|trans}}</a>
+      <a class="btn btn-lg btn-primary" href="{{ path('course_learn', {id:course.id,lessonId:nextLearnLesson.id}) }}#lesson/{{ nextLearnLesson.id }}">{{'开始学习'|trans}}</a>
       <span class="next-class hidden-xs">{{'下一课时：'|trans}}<a href="{{ path('course_learn', {id:course.id}) }}#lesson/{{ nextLearnLesson.id }}">{{ nextLearnLesson.title|raw }}</a></span>
     {% endif %}
   </div>
