--- a/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
@@ -74,7 +74,7 @@
       </div>
 
 
-      <div class="form-group">
+      <div class="form-group" style="display: none">
         <label class="col-md-2 control-label">{{'资源类型'|trans}}</label>
         <div class="col-md-8 controls">
           <input type="text" id="course_tags" name="tags" required="required" class="width-full select2-offscreen" tabindex="-1" value="{{ tags|join(',') }}" data-explain="{{'用于按标签搜索课程、相关课程的提取等，由网校管理员后台统一管理'|trans}}">
