--- a/web/bundles/topxiamobilebundlev2/main/view/course_learn.html
+++ b/web/bundles/topxiamobilebundlev2/main/view/course_learn.html
@@ -137,7 +137,7 @@
         <button ng-click="favoriteCourse()" ng-class="isFavorited ? 'course-favorited' : '' " class="ui-btn btn-gray-light btn-outline btn-col-15 iconfont icon-heart">
         </button>
         <button class="ui-btn btn-green btn-col-60" ng-click="continueLearnCourse()" ng-init="initLearnStatus()">
-            继续学习
+            开始学习
         </button>
     </div>
 
