--- a/web/themes/default-b/TopxiaWebBundle/views/Default/user-learning.html.twig
+++ b/web/themes/default-b/TopxiaWebBundle/views/Default/user-learning.html.twig
@@ -18,7 +18,7 @@
 
         {% if nextLearnLesson %}
           <div class="continue">
-            <a href="{{ path('course_learn', {id:course.id}) }}#lesson/{{nextLearnLesson.id}}" title="继续学习：{{ nextLearnLesson.title }}" class="btn btn-success pull-right">继续学习</a>
+            <a href="{{ path('course_learn', {id:course.id}) }}#lesson/{{nextLearnLesson.id}}" title="开始学习：{{ nextLearnLesson.title }}" class="btn btn-success pull-right">开始学习</a>
           </div>
         {% endif %}
       </div>
