--- a/web/themes/default-b/TopxiaWebBundle/views/Default/index.html.twig
+++ b/web/themes/default-b/TopxiaWebBundle/views/Default/index.html.twig
@@ -501,7 +501,7 @@
                 <div class="progress">
                   <div class="progress-bar progress-bar-success" style="width: {{ percent(course.memberLearnedNum, course.lessonNum) }};"></div>
                 </div>
-                <div class="action"><span class="btn btn-primary btn-sm">继续学习</span></div>
+                <div class="action"><span class="btn btn-primary btn-sm">开始学习</span></div>
               {% endif %}
             </div>
             {% if course.status == 'draft' %}
