--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/my-classroom.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/my-classroom.html.twig
@@ -40,7 +40,7 @@
 
                 <div class="pull-right">
                 <span class="text-muted">已学了{{classroom.day}}天</span><br>
-                <a href="{{ path('classroom_show', {id:classroom.id}) }}" class="btn btn-info btn-sm mts">继续学习</a>
+                <a href="{{ path('classroom_show', {id:classroom.id}) }}" class="btn btn-info btn-sm mts">开始学习</a>
                 </div>
                 {% else %}
                 <div class="pull-right">
