--- a/src/Topxia/WebBundle/Resources/views/Course/courses-block-grid.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/courses-block-grid.html.twig
@@ -120,7 +120,7 @@
               <div class="progress">
                 <div class="progress-bar progress-bar-success" style="width: {{ percent(course.memberLearnedNum, course.lessonNum) }};"></div>
               </div>
-              <div class="action"><span class="btn btn-primary btn-sm">{{'继续学习'|trans}}</span></div>
+              <div class="action"><span class="btn btn-primary btn-sm">{{'开始学习'|trans}}</span></div>
             {% endif %}
           </div>
           {% if course.status == 'draft' %}
