--- a/src/Topxia/WebBundle/Resources/views/Course/progress-block.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/progress-block.html.twig
@@ -9,7 +9,7 @@
         <button class="btn btn-default btn-sm disabled pull-right">{{'您已完成全部课时的学习'|trans}}</button>
       {% else %}
         {% if nextLearnLesson %}
-          <a class="btn btn-primary btn-sm pull-right" id="next-learn-btn" href="{{ path('course_learn', {id:course.id}) }}#lesson/{{nextLearnLesson.id}}" title="{{'继续学习：'|trans}}{{ nextLearnLesson.title }}">{{'继续学习'|trans}}</a>
+          <a class="btn btn-primary btn-sm pull-right" id="next-learn-btn" href="{{ path('course_learn', {id:course.id}) }}#lesson/{{nextLearnLesson.id}}" title="{{'开始学习：'|trans}}{{ nextLearnLesson.title }}">{{'开始学习'|trans}}</a>
         {% endif %}
       {% endif %}
 
