--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/lesson-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/lesson-modal.html.twig
@@ -117,14 +117,15 @@
     </div>
   </div>
 #}
-  <div class="form-group for-video-type for-audio-type" id="lesson-length-form-group" style="display: none">
-      <div class="col-md-2 control-label for-video-type"><label>{{'文件时长'|trans}}</label></div>
+  <!--文件时长-->
+  <div class="form-group for-video-type for-audio-type" id="lesson-length-form-group" >
+      <div class="col-md-2 control-label for-video-type"><label>{{'建议学习时长'|trans}}</label></div>
       <div class="hide"><label for="lesson-length-field">{{'视频时长或'|trans}}</label></div>
       <div class="col-md-2 control-label for-audio-type"><label for="lesson-length-field">{{'音频时长'|trans}}</label></div>
     <div class="col-md-9 controls">
-      <input class="form-control width-input width-input-small" id="lesson-minute-field" type="text" name="minute" value="{{ field_value(lesson, 'minute') | default(60) }}">{{'分'|trans}}
-      <input class="form-control width-input width-input-small" id="lesson-second-field" type="text" name="second" value="{{ field_value(lesson, 'second') | default(59) }}">{{'秒'|trans}}
-      <div class="help-block">{{'时长必须为整数。'|trans}}</div>
+      <input class="form-control width-input width-input-small" id="lesson-minute-field" type="text" name="minute" value="{{ field_value(lesson, 'minute') }}">{{'分'|trans}}
+      <input class="form-control width-input width-input-small" id="lesson-second-field" type="text" name="second" value="{{ field_value(lesson, 'second') }}">{{'秒'|trans}}
+      <div class="help-block">{{'时长必须为整数，并且不少于视频时长'|trans}}</div>
     </div>
   </div>
 
@@ -139,7 +140,7 @@
 
 
 
-  <div class="form-group">
+  <div class="form-group" style="display: none">
     <div class="col-md-2 control-label"><label>{{'建议学习时长'|trans}}</label></div>
     <div class="col-md-9 controls">
       <input class="form-control width-input width-input-small" id="lesson-suggest-period-field" type="text" name="suggestHours" value="{{ lesson.suggestHours|default('1.0') }}">{{'小时'|trans}}
